--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js practices</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets/styles.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="Assets/script.js"></script>
     <div class="container">
         <div class="score">
             <span id="user-score">0</span>
