--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js practices</title>
+    <title>QUIZ-BOARD</title>
     <link rel="stylesheet" href="Assets/styles.css">
+    <script src="Assets/script.js"></script>
 </head>
 <body>
-    <script src="Assets/script.js"></script>
+    
     <div class="container">
         <div class="score">
             <span id="user-score">0</span>
