fixing js problem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ-BOARD</title>
     <link rel="stylesheet" href="Assets/styles.css">
-    <script src="Assets/script.js"></script>
+    <!-- <script src="Assets/script.js"></script> -->
 </head>
 <body>
     
@@ -27,8 +27,9 @@
             <button class="btn btn-restart" id="restart">Restart</button>
             <button class="btn btn-prev" id="prev">PREV</button>
             <button class="btn btn-next" id="next">Next</button>
-            <button class="btn btn-submit" id="submit">Submit</button>
+            <button class="btn btn-submit"  id="submit">Submit</button>
         </div>
     </div>
+    <script src="Assets/script.js"></script>
 </body>
 </html>
