--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="controls">
             <button class="btn btn-restart" id="restart">Restart</button>
-            <button class="btn btn-prev" id="prev">PREV</button>
+            <button class="btn btn-prev" id="prev">Prev</button>
             <button class="btn btn-next" id="next">Next</button>
             <button class="btn btn-submit"  id="submit">Submit</button>
         </div>
