--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ-BOARD</title>
     <link rel="stylesheet" href="Assets/styles.css">
-    <!-- <script src="Assets/script.js"></script> -->
+
 </head>
 <body>
     
     <div class="container">
         <div class="score">
             <span id="user-score">0</span>
-        <span>/</span>
-            <span class="total-score">0</span>
+       
+            <span class="total-score">/3</span>
         </div>
         <div class="content" id="question-area">
             <div class="question-text"></div>
@@ -24,10 +24,10 @@
             </div>
         </div>
         <div class="controls">
-            <button class="btn btn-restart" id="restart">Restart</button>
-            <button class="btn btn-prev" id="prev">Prev</button>
-            <button class="btn btn-next" id="next">Next</button>
-            <button class="btn btn-submit"  id="submit">Submit</button>
+            <button class="btn btn-restart" id="restart" class="hide">Restart</button>
+            <button class="btn btn-prev" id="prev" class="hide">Prev</button>
+            <button class="btn btn-next" id="next" class="hide">Next</button>
+            <button class="btn btn-submit"  id="submit" class="hide">Submit</button>
         </div>
     </div>
     <script src="Assets/script.js"></script>
