--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="total-score">/3</span>
         </div>
         <div class="content" id="question-area">
-            <div class="question-text"></div>
+            <div class="question-text" id="question-text"></div>
             <div class="options">
                 <button class="btn btn-option" id="True">True</button>
                 <button class="btn btn-option" id="False">False</button>
